@@ -10,11 +10,12 @@ import java.util.List;
 import java.util.stream.Stream;
 
 public final class ConfigCached {
-    public static boolean EANBLE_CHANGE = false;
-    public static boolean EANBLE_LOSS = false;
-    public static boolean EANBLE_HUNGER = false;
-    public static boolean EANBLE_SATURATION = false;
-    public static boolean EANBLE_EAT_SECONDS = false;
+    public static boolean ENABLE_CHANGE = false;
+    public static boolean ENABLE_LOSS = false;
+    public static boolean ENABLE_HUNGER = false;
+    public static boolean ENABLE_SATURATION = false;
+    public static boolean ENABLE_EAT_SECONDS = false;
+    public static boolean ENABLE_ACTIONS_LOSS = false;
     public static int HISTORY_LENGTH_LONG = 512;
     public static int HISTORY_LENGTH_SHORT = 16;
     public static List<? extends String> LOSS = List.of("0");
@@ -23,6 +24,13 @@ public final class ConfigCached {
     public static List<? extends String> EAT_SECONDS = List.of("EAT_SECONDS_ORG");
     public static List<? extends String> BLACK_FOOD = List.of("");
     public static HashMap<Integer,Float> BLACK_FOOD_T = new HashMap<>();
+    public static double ACTION_MOVE   = 0D;
+    public static double ACTION_JUMP   = 0D;
+    public static double ACTION_SWIM   = 0D;
+    public static double ACTION_CLIMB  = 0D;
+    public static double ACTION_CLICK  = 0D;
+    public static double ACTION_USE    = 0D;
+    public static double ACTION_FLYING = 0D;
 
     @SubscribeEvent
     public static void onConfigLoaded(ModConfigEvent.Loading event) {
@@ -38,11 +46,12 @@ public final class ConfigCached {
         }
     }
     private static void update(){
-        EANBLE_CHANGE = Config.EANBLE_CHANGE.get();
-        EANBLE_LOSS = Config.EANBLE_LOSS.get();
-        EANBLE_HUNGER = Config.EANBLE_HUNGER.get();
-        EANBLE_SATURATION = Config.EANBLE_SATURATION.get();
-        EANBLE_EAT_SECONDS = Config.EANBLE_EAT_SECONDS.get();
+        ENABLE_CHANGE = Config.EANBLE_CHANGE.get();
+        ENABLE_LOSS = Config.ENABLE_LOSS.get();
+        ENABLE_HUNGER = Config.ENABLE_HUNGER.get();
+        ENABLE_SATURATION = Config.ENABLE_SATURATION.get();
+        ENABLE_EAT_SECONDS = Config.ENABLE_EAT_SECONDS.get();
+        ENABLE_ACTIONS_LOSS = Config.ENABLE_ACTIONS_LOSS.get();
         HISTORY_LENGTH_LONG = Config.HISTORY_LENGTH_LONG.get();
         HISTORY_LENGTH_SHORT = Config.HISTORY_LENGTH_SHORT.get();
         LOSS = Config.LOSS.get();
@@ -66,11 +75,18 @@ public final class ConfigCached {
                         })
                         .findFirst()
                         .filter(j -> !(j.isNaN() || j.isInfinite()))
-                        .map(j -> Math.max(0F, Math.min(1F, j)))
+                        .map(j -> Math.clamp(j, 0F, 1F))
                         .orElse(0F)
                 );
             }
         });
         BLACK_FOOD_T = ts;
+        ACTION_MOVE   = Config.ACTION_MOVE  .get();
+        ACTION_JUMP   = Config.ACTION_JUMP  .get();
+        ACTION_SWIM   = Config.ACTION_SWIM  .get();
+        ACTION_CLIMB  = Config.ACTION_CLIMB .get();
+        ACTION_CLICK  = Config.ACTION_CLICK .get();
+        ACTION_USE    = Config.ACTION_USE   .get();
+        ACTION_FLYING = Config.ACTION_FLYING.get();
     }
 }
